--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
               <p>
-                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and it's English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP in the backend or working with APIs to building out the frontend, and sometimes even making product videos and researching new features for our users. 
+                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP in the backend or working with APIs to building out the frontend, and sometimes even making product videos and researching new features for our users. 
               </p>
               <p>
                 Before LekkeSlaap, I started a small digital agency, <a href="http://dune8.com">Dune8</a>. I get really excited about things like reducing latency and js object creation patterns.
