--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -268,6 +268,7 @@
                 <a href="https://github.com/KatieLo"><i class="fa fa-github"></i></a>
                 <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://medium.com/me/stories/public"><i class="fa fa-medium"></i></a>
                 <a href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a>k.a.womersley@gmail.com 
           </div>
         </div>
