--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="#work">Client Work</a></li>
             <li ><a href="#sites">Sites</a></li>
             <li><a href="#more-about">About Me</a></li>
-            <li><a href="http://gsvinfinitecuriosity.tumblr.com/">Blog</a></li>
+            <li><a href="http://blog.katiewomersley.com/">Blog</a></li>
           </ul>
         </div>
       </div>
@@ -49,15 +49,14 @@
       </div>
 
       <div class="section" id="about">
-        <!--<h2>About Me</h2>-->
           <div class="row">
             <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
               <p>
-                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP in the backend or working with APIs to building out the frontend, and sometimes even making product videos and researching new features for our users. 
+                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP (the object orientated kind) in the backend or working with APIs to building out the frontend with Javascript, HTML and CSS, and sometimes even making product videos and researching new features for our awesome users.
               </p>
               <p>
-                Before LekkeSlaap, I started a small digital agency, <a href="http://dune8.com">Dune8</a>. I get really excited about things like reducing latency and js object creation patterns.
+                Before LekkeSlaap, I started a small digital agency, <a href="http://dune8.com">Dune8</a> where I built everything from a full Rails CMS to a custom WordPress site. I get really excited about things like reducing latency and js object creation patterns.
               </p>
             </div>
           </div>
@@ -120,9 +119,24 @@
 
       <div class="section" id="work">
         <h2>Client Work</h2>
-        <p>Before joining Lekkeslaap full time, I ran a digital agency, <a href="http://dune8.com">Dune8.com</a> where I built websites for clients. I also designed the sites and helped with content strategy to communicate what each client's business offered in a clear and engaging way to the user. This experience taught me so much about managing and communicating with clients, managing projects and timelines and how to use the right tool for the job, from a custom Wordpress project to building out a full-stack Rails CMS.</p>
+        <p>Before joining Lekkeslaap full time, I ran my own small digital agency, <a href="http://dune8.com">Dune8.com</a> where I built websites for clients. I also designed the sites and helped with content strategy to communicate what each client's business offered in a clear and engaging way to the user. This experience taught me so much about managing and communicating with clients, managing projects and timelines and how to use the right tool for the job, from a custom Wordpress project to building out a full-stack Rails CMS.</p>
         <div class="row js-masonry"
   data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
+          <div class="col-xs-12 col-sm-6 col-md-4 item">
+            <div class="thumbnail ">
+              <a href="http://ormsphototours.herokuapp.com/" class="thumbnail">
+                <img src="images/orms-logo.png" alt="Orms Photographic Tours">
+              </a>
+              <div class="caption">
+                <h3>Orms Photographic Tours</h3>
+                <p>Orms Photographic Tours a Rails site to showcase high-end photographic expeditions for small groups of clients. This was my first project managing relationships with a larger corporate client with different stakeholders. The site is currently in pre-realease.</p>
+                <p class="fine-print">
+                  Rails backend, custom-made bootstrap responsive theme, rental gear page has javascript search, filtering and sorting, custom admin portal to edit rental gear, tours, testimonials and photos.
+                </p>
+                <a href="http://ormsphototours.herokuapp.com/">Visit Orms Photographic Tours</a>
+              </div>
+            </div>
+          </div>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
               <a href="http://fizantakraal.co.za/" class="thumbnail">
@@ -166,21 +180,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="http://ormsphototours.herokuapp.com/" class="thumbnail">
-                <img src="images/orms-logo.png" alt="Orms Photographic Tours">
-              </a>
-              <div class="caption">
-                <h3>Orms Photographic Tours</h3>
-                <p>My most challenging project so far, Orms was a Rails site to showcase photographic tours. This was my first project managing relationships with a larger corporate client with different stakeholders. The site is currently in pre-realease.</p>
-                <p class="fine-print">
-                  Rails backend, custom-made bootstrap responsive theme, rental gear page has javascript search, filtering and sorting, custom admin portal to edit rental gear, tours, testimonials and photos.
-                </p>
-                <a href="http://ormsphototours.herokuapp.com/">Visit Orms Photographic Tours</a>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
 
@@ -246,16 +246,16 @@
         <div class="row">
           <div class="col-xs-12">
             <p>
-              My undergrad was in Philosophy and Economics, because I am really curious and I wanted to know the meaning of Life, the Universe and Everything. I then did an MSc in Managerial Economics at the London School of Economics. After graduating I realised the corporate life wasn't for me so I did a u-turn to pursure my own definition of happiness and success and taught myself to code instead (which I love!).  I also like languages and am teaching myself German.
+              My undergrad was in Philosophy and Economics, because I am quite curious and I wanted to know the meaning of Life, the Universe and Everything! I then did an MSc in Managerial Economics at the London School of Economics and learned a lot about managment, which is really interesting to me because I love how good management practices have the power to encourage and develop people to be truly fulfilled and reach their potential (and even grow into new areas). The corporate life wasn't for me though, and after graduating I did a u-turn to pursure my own definition of happiness and success and taught myself to code (which I love!). I also like languages and am teaching myself German at the moment. Vielen Dank für Ihre Zeit! 
             </p> 
             <p>
-              What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things. My ambition is to be the best developer I can be.
+              What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things and being exposed to different challenges.
             </p>
             <p>
-              My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing powder and Christmas rock my world. But most of all, I love to learn.
+              My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing and Christmas rock my world. But most of all, I love to learn.
             </p>
             <p>
-              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting about code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me.</a>
+              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me.</a>
             </p>  
           </div>
         </div>
@@ -268,7 +268,7 @@
                 <a href="https://github.com/KatieLo"><i class="fa fa-github"></i></a>
                 <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a>
-                <a href="https://medium.com/me/stories/public"><i class="fa fa-medium"></i></a>
+                <a href="https://medium.com/@kawomersley"><i class="fa fa-medium"></i></a>
                 <a href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a>k.a.womersley@gmail.com 
           </div>
         </div>
