--- a/index.html
+++ b/index.html
@@ -45,7 +45,19 @@
         <h4>My name is</h4>
         <h1>Katie Womersley</h1>
         <h4>and I build cool web stuff</h4>
-        <div><a href="https://github.com/KatieLo"><i class="fa fa-github"></a></i> <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a> <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a></div>
+        <div>
+          <a href="https://github.com/KatieLo">
+            <i class="fa fa-github"></i></a>
+          <a href="https://twitter.com/katie_womers">
+            <i class="fa fa-twitter"></i>
+          </a>
+          <a href="https://medium.com/@kawomersley">
+            <i class="fa fa-medium"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/kathleenwomersley">
+            <i class="fa fa-linkedin-square"></i>
+          </a>
+        </div>
       </div>
 
       <div class="section" id="about">
@@ -249,13 +261,11 @@
               My undergrad was in Philosophy and Economics, because I am quite curious and I wanted to know the meaning of Life, the Universe and Everything! I then did an MSc in Managerial Economics at the London School of Economics and learned a lot about managment, which is really interesting to me because I love how good management practices have the power to encourage and develop people to be truly fulfilled and reach their potential (and even grow into new areas). The corporate life wasn't for me though, and after graduating I did a u-turn to pursure my own definition of happiness and success and taught myself to code (which I love!). I also like languages and am teaching myself German at the moment. Vielen Dank für Ihre Zeit! 
             </p> 
             <p>
-              What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things and being exposed to different challenges.
+              What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things and being exposed to different challenges.My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing and Christmas rock my world.
             </p>
+  
             <p>
-              My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing and Christmas rock my world. But most of all, I love to learn.
-            </p>
-            <p>
-              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me.</a>
+              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me. I'd love to say hi :) </a>
             </p>  
           </div>
         </div>
