--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </p>
   
             <p>
-              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me. I'd love to say hi :) </a>
+              You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me</a>. I'd love to say hi :) 
             </p>  
           </div>
         </div>
