add katies-list project

--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
   </head>
 
   <body>
+    <!--
+  ░░░░░░░░░▄░░░░░░░░░░░░░░▄░░░░
+  ░░░░░░░░▌▒█░░░░░░░░░░░▄▀▒▌░░░
+  ░░░░░░░░▌▒▒█░░░░░░░░▄▀▒▒▒▐░░░
+  ░░░░░░░▐▄▀▒▒▀▀▀▀▄▄▄▀▒▒▒▒▒▐░░░
+  ░░░░░▄▄▀▒░▒▒▒▒▒▒▒▒▒█▒▒▄█▒▐░░░
+  ░░░▄▀▒▒▒░░░▒▒▒░░░▒▒▒▀██▀▒▌░░░ 
+  ░░▐▒▒▒▄▄▒▒▒▒░░░▒▒▒▒▒▒▒▀▄▒▒▌░░
+  ░░▌░░▌█▀▒▒▒▒▒▄▀█▄▒▒▒▒▒▒▒█▒▐░░
+  ░▐░░░▒▒▒▒▒▒▒▒▌██▀▒▒░░░▒▒▒▀▄▌░
+  ░▌░▒▄██▄▒▒▒▒▒▒▒▒▒░░░░░░▒▒▒▒▌░
+  ▀▒▀▐▄█▄█▌▄░▀▒▒░░░░░░░░░░▒▒▒▐░
+  ▐▒▒▐▀▐▀▒░▄▄▒▄▒▒▒▒▒▒░▒░▒░▒▒▒▒▌
+  ▐▒▒▒▀▀▄▄▒▒▒▄▒▒▒▒▒▒▒▒░▒░▒░▒▒▐░
+  ░▌▒▒▒▒▒▒▀▀▀▒▒▒▒▒▒░▒░▒░▒░▒▒▒▌░
+  ░▐▒▒▒▒▒▒▒▒▒▒▒▒▒▒░▒░▒░▒▒▄▒▒▐░░
+  ░░▀▄▒▒▒▒▒▒▒▒▒▒▒░▒░▒░▒▄▒▒▒▒▌░░
+  ░░░░▀▄▒▒▒▒▒▒▒▒▒▒▄▄▄▀▒▒▒▒▄▀░░░
+  ░░░░░░▀▄▄▄▄▄▄▀▀▀▒▒▒▒▒▄▄▀░░░░░
+  ░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▀▀░░░░░░░░
+  wow such hi! :)
+  -->
 
     <!-- Fixed navbar --> 
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -65,7 +87,7 @@
             <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
               <p>
-                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP (the object orientated kind) in the backend or working with APIs to building out the frontend with Javascript, HTML and CSS, and sometimes even making product videos and researching new features for our awesome users.
+                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for Cape Town startup <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP (the object orientated kind) in the backend or working with APIs to building out the frontend with Javascript, HTML and CSS, and sometimes even making product videos and researching new features for our awesome users.
               </p>
               <p>
                 Before LekkeSlaap, I started a small digital agency, <a href="http://dune8.com">Dune8</a> where I built everything from a full Rails CMS to a custom WordPress site. I get really excited about things like reducing latency and js object creation patterns.
@@ -81,6 +103,35 @@
         <h2>Projects</h2>
         <p> These are bigger personal projects I've worked to play around with new technologies and build fun stuff (that hopefully is also sometimes useful!)</p>
         <div class="row item-container js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
+          <div class="col-xs-12 col-sm-6 col-md-4 item">
+            <div class="thumbnail ">
+              <a href="http://katies-list.katiewomersley.com/" class="thumbnail" target="_blank">
+                <img src="images/katies-list.png" alt="Katie's List">
+              </a>
+              <div class="caption">
+                <h3>Katie's List</h3>
+                <p>Am easy way to find the right day care in the South Bay, built with React.js.</p>
+                <p class="fine-print">Tools and Skills: React.js, Sass, Rails backend 
+                </p>
+                <a href="http://katies-list.katiewomersley.com/" target="_blank">Visit Katie's List</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 item">
+            <div class="thumbnail ">
+              <a href="/projects/chatterbox/" class="thumbnail" target="_blank">
+                <img src="images/chatterbox-small.png" alt="Chatterbox - anonymous chat with Backbone.js">
+              </a>
+              <div class="caption">
+                <h3>Chatterbox</h3>
+                <p>An anonymous web chat app built with Backbone.js</p>
+                <p class="fine-print">
+                  Backbone.js framework, firebase backend, bower for front-end dependency management
+                </p>
+                <a href="/projects/chatterbox/" target="_blank">Chat!</a>
+              </div>
+            </div>
+          </div>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
               <a href="http://captainslogapp.com/" class="thumbnail" target="_blank">
@@ -110,22 +161,6 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="/projects/chatterbox/" class="thumbnail" target="_blank">
-                <img src="images/chatterbox-small.png" alt="Chatterbox - anonymous chat with Backbone.js">
-              </a>
-              <div class="caption">
-                <h3>Chatterbox</h3>
-                <p>An anonymous web chat app built with Backbone.js</p>
-                <p class="fine-print">
-                  Backbone.js framework, firebase backend, bower for front-end dependency management
-                </p>
-                <a href="/projects/chatterbox/" target="_blank">Chat!</a>
-              </div>
-            </div>
-          </div>
-
         </div>
       </div>
 
@@ -224,19 +259,6 @@
               </div>
             </div>
           </div>
-          <!--
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-              <div class="thumbnail ">
-                <a href="/sites/Hipster-Quiz2.0/" class="thumbnail">
-                  <img src="images/hipster.png" alt="Hipster Quiz">
-                </a>
-                <div class="caption">
-                  <h3>Hipster Quiz</h3>
-                  <p>A dynamic quiz using Javascript objects stored in an array, where a new question is shown each time the user clicks "next", and a final score is displayed after the last question, without reloading the page.</p>
-                  <a href="/sites/Sierpinski/">See Hipster Quiz</a>
-                </div>
-              </div>
-          </div>-->
           <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
               <a href="/sites/Wedding/" class="thumbnail">
@@ -258,7 +280,7 @@
         <div class="row">
           <div class="col-xs-12">
             <p>
-              My undergrad was in Philosophy and Economics, because I am quite curious and I wanted to know the meaning of Life, the Universe and Everything! I then did an MSc in Managerial Economics at the London School of Economics and learned a lot about managment, which is really interesting to me because I love how good management practices have the power to encourage and develop people to be truly fulfilled and reach their potential (and even grow into new areas). The corporate life wasn't for me though, and after graduating I did a u-turn to pursure my own definition of happiness and success and taught myself to code (which I love!). I also like languages and am teaching myself German at the moment. Vielen Dank für Ihre Zeit! 
+              My undergrad was in Philosophy and Economics, because I am quite curious and I wanted to know the meaning of Life, the Universe and Everything! I then did an MSc in Managerial Economics at the London School of Economics, which was really interesting to me because I love how good management practices have the power to encourage and develop people to be truly fulfilled and reach their potential (and even grow into new areas). The corporate life wasn't for me though, and after graduating I did a u-turn to pursure my own definition of happiness and success and taught myself to code (which I love!). I also like languages and am teaching myself German at the moment.
             </p> 
             <p>
               What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things and being exposed to different challenges.My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing and Christmas rock my world.
