add new orms live link and update copy

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
               <p>
-                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack web developer working remotely for Cape Town startup <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="http://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP (the object orientated kind) in the backend or working with APIs to building out the frontend with Javascript, HTML and CSS, and sometimes even making product videos and researching new features for our awesome users.
+                Hi, I'm Katie. Thank you for visiting my internet home. I'm a full stack developer working remotely for Cape Town startup <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="https://travelground.com">Travelground.com</a>, where my day is spent anywhere from writing SQL and PHP (the object orientated kind) in the backend or working with APIs to building out the frontend with Javascript, HTML and CSS, and sometimes even making product videos and researching new features for our awesome users!
               </p>
               <p>
                 Before LekkeSlaap, I started a small digital agency, <a href="http://dune8.com">Dune8</a> where I built everything from a full Rails CMS to a custom WordPress site. I get really excited about things like reducing latency and js object creation patterns.
@@ -101,7 +101,7 @@
 
       <div class="section" id="projects">
         <h2>Projects</h2>
-        <p> These are bigger personal projects I've worked to play around with new technologies and build fun stuff (that hopefully is also sometimes useful!)</p>
+        <p> These are bigger personal projects I've worked to play around with new technologies and build fun stuff (that is hopefully also sometimes useful!)</p>
         <div class="row item-container js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
             <div class="thumbnail ">
@@ -126,7 +126,7 @@
                 <h3>Chatterbox</h3>
                 <p>An anonymous web chat app built with Backbone.js</p>
                 <p class="fine-print">
-                  Backbone.js framework, firebase backend, bower for front-end dependency management
+                  Backbone.js, Firebase backend, Bower for front-end dependency management
                 </p>
                 <a href="/projects/chatterbox/" target="_blank">Chat!</a>
               </div>
@@ -166,7 +166,7 @@
 
       <div class="section" id="work">
         <h2>Client Work</h2>
-        <p>Before joining Lekkeslaap full time, I ran my own small digital agency, <a href="http://dune8.com">Dune8.com</a> where I built websites for clients. I also designed the sites and helped with content strategy to communicate what each client's business offered in a clear and engaging way to the user. This experience taught me so much about managing and communicating with clients, managing projects and timelines and how to use the right tool for the job, from a custom Wordpress project to building out a full-stack Rails CMS.</p>
+        <p>Before joining Lekkeslaap full time, I ran my own small digital agency, <a href="http://dune8.com">Dune8.com</a> where I built websites for clients. I also designed the sites and helped with content strategy to communicate what each client's business offered in a clear and engaging way to the user. This experience taught me so much about communicating with clients, managing projects and timelines and how to use the right tool for the job, from a custom WordPress project to building out a full-stack Rails CMS.</p>
         <div class="row js-masonry"
   data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
           <div class="col-xs-12 col-sm-6 col-md-4 item">
@@ -176,11 +176,11 @@
               </a>
               <div class="caption">
                 <h3>Orms Photographic Tours</h3>
-                <p>Orms Photographic Tours a Rails site to showcase high-end photographic expeditions for small groups of clients. This was my first project managing relationships with a larger corporate client with different stakeholders. The site is currently in pre-realease.</p>
+                <p>Orms Photographic Tours is a Rails site to showcase high-end photographic expeditions for small groups of amateur and professional photographer clients. This was my first project managing relationships with a larger corporate client with different stakeholders.</p>
                 <p class="fine-print">
                   Rails backend, custom-made bootstrap responsive theme, rental gear page has javascript search, filtering and sorting, custom admin portal to edit rental gear, tours, testimonials and photos.
                 </p>
-                <a href="http://ormsphototours.herokuapp.com/">Visit Orms Photographic Tours</a>
+                <a href="http://ormsphototours.com/">Visit Orms Photographic Tours</a>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@
                 <h3>Steve Louw Musician Website</h3>
                 <p>This site was designed and built to showcase music and the band's image and allow users to stream and buy music and videos.</p>
 
-                <p class="fine-print">Tools and Skills: PHP backend with SQL database using prepared statements, HTML and CSS frontend, responsive design, custom music streaming, search and autocomplete for albums, songs and lyrics, npm and grunt for asset pipeline.</p>
+                <p class="fine-print">Tools and Skills: PHP backend with SQL database using prepared statements, responsive design, custom music streaming, search and autocomplete for albums, songs and lyrics, npm and grunt for asset pipeline.</p>
                 <a href="http://www.stevelouw.org/">Visit Stevelouw.org</a>
               </div>
             </div>
@@ -220,8 +220,8 @@
               </a>
               <div class="caption">
                 <h3>Youthinc Consultancy</h3>
-                <p>Youthinc.sa is a custom wordpress site since the site would be changing a lot as the team and projects evolved and everything needed to be editable.</p>
-                <p class="fine-print">Tools and Skills: developing for Wordpress, responsive design, information hierarchy and content writing.
+                <p>Youthinc.sa is a custom WordPress site since the site would be changing a lot as the team and projects evolved and everything needed to be editable.</p>
+                <p class="fine-print">Tools and Skills: developing for WordPress, responsive design, information hierarchy and content writing.
                 </p>
                 <a href="http://www.youthincsa.com/">Visit Youthincsa.com</a>
               </div>
@@ -254,7 +254,7 @@
               </a>
               <div class="caption">
                 <h3>City Explorer</h3>
-                <p>Uses Ajax to query the NYTimes, Wikipedia and Google Maps APIs and show images and links related to a street address.</p>
+                <p>Queries the NYTimes, Wikipedia and Google Maps APIs to show images and links related to a user provided street address.</p>
                 <a href="/sites/Move-Planner/">See City Explorer</a>
               </div>
             </div>
@@ -266,7 +266,7 @@
               </a>
               <div class="caption">
                 <h3>Website for my Wedding!</h3>
-                <p>Simple but pretty informational site.</p>
+                <p>Simple and pretty informational site.</p>
                 <a href="/sites/Wedding/">See Wedding Site</a>
               </div>
             </div>
@@ -280,10 +280,10 @@
         <div class="row">
           <div class="col-xs-12">
             <p>
-              My undergrad was in Philosophy and Economics, because I am quite curious and I wanted to know the meaning of Life, the Universe and Everything! I then did an MSc in Managerial Economics at the London School of Economics, which was really interesting to me because I love how good management practices have the power to encourage and develop people to be truly fulfilled and reach their potential (and even grow into new areas). The corporate life wasn't for me though, and after graduating I did a u-turn to pursure my own definition of happiness and success and taught myself to code (which I love!). I also like languages and am teaching myself German at the moment.
+              My undergrad was in Philosophy and Economics, because I am quite curious and I wanted to know the meaning of Life, the Universe and Everything! I then did an MSc in Managerial Economics at the London School of Economics (LSE), which was really interesting to me because I love how good management practices have the power to encourage and develop people to be truly fulfilled and reach their potential (and even grow into new areas). The corporate life wasn't for me though, and after graduating I did a u-turn to pursue my own definition of happiness and success and taught myself to code (which I love!). I also like languages and am teaching myself German at the moment.
             </p> 
             <p>
-              What I love about coding is being able to build things I think about, and how the industry is so fast-paced that I'm always learning new things and being exposed to different challenges.My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing and Christmas rock my world.
+              What I love about being a developer is being able to build useful tools that make people's lives easier, and how the industry is so fast-paced that I'm always learning new things and being exposed to different challenges. My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing and my family rock my world.
             </p>
   
             <p>
