--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!-- Bootstrap core CSS -->
     <link href="css/styles.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans' rel='stylesheet' type='text/css'>
-
   </head>
 
   <body>
@@ -230,22 +229,24 @@
         <h2>Sites</h2>
         <p>These are smaller fun sites I've built to hone my craft!</p>
         <div class="js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
+
           <div class="col-xs-12 col-sm-6 col-md-4 item">
-              <div class="thumbnail ">
-                <a href="/sites/Sierpinski/" class="thumbnail">
-                  <img src="images/sierpinski.png" alt="Sierpinski Triangles ">
-                </a>
-                <div class="caption">
-                  <h3>Sierpinski Triangles</h3>
-                  <p>Draws recursive triangles on HTML canvas to create the Sierpinksi fractal pattern.</p>
-                  <a href="/sites/Sierpinski/">See Sierpinksi</a>
-                </div>
+            <div class="thumbnail">
+              <a href="/sites/Sierpinski/" class="thumbnail">
+                <img src="images/sierpinski.png" alt="Sierpinski Triangles" />
+              </a>
+              <div class="caption">
+                <h3>Sierpinski Triangles</h3>
+                <p>Draws recursive triangles on HTML canvas to create the Sierpinksi fractal pattern.</p>
+                <a href="/sites/Sierpinski/">See Sierpinksi</a>
               </div>
+            </div>
           </div>
+
           <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
+            <div class="thumbnail">
               <a href="/sites/Move-Planner/" class="thumbnail">
-                <img src="images/cityexplorer.png" alt="City Explorer">
+                <img src="images/cityexplorer.png" alt="City Explorer" />
               </a>
               <div class="caption">
                 <h3>City Explorer</h3>
@@ -254,8 +255,9 @@
               </div>
             </div>
           </div>
+
           <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
+            <div class="thumbnail">
               <a href="/sites/Wedding/" class="thumbnail">
                 <img src="images/wedding.png" alt="Wedding Site">
               </a>
@@ -266,9 +268,13 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
 
+      <div>
+        &nbsp;
+      </div>
 
       <div class="section" id="more-about">
         <h2>A Bit More About Me</h2>
@@ -287,6 +293,8 @@
           </div>
         </div>
       </div>
+
+    </div>
 
     <footer class="footer">
       <div class="container">
