--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#work">Client Work</a></li>
-            <li ><a href="#sites">Sites</a></li>
             <li><a href="#more-about">About Me</a></li>
             <li><a href="http://blog.katiewomersley.com/">Blog</a></li>
           </ul>
@@ -63,19 +60,19 @@
     <div class="container">
 
       <div class="page-header">
-        <h4>My name is</h4>
-        <h1>Katie Womersley</h1>
-        <h4>and I build cool web stuff</h4>
+        <h4 class="editable" editable-label="my-name-is">My name is</h4>
+        <h1 class="editable" editable-label="name">Katie Womersley</h1>
+        <h4 class="editable" editable-label="tagline">and I build cool web stuff</h4>
         <div>
-          <a href="https://github.com/KatieLo">
+          <a class="editable" editable-label="github-link" href="https://github.com/KatieLo">
             <i class="fa fa-github"></i></a>
-          <a href="https://twitter.com/katie_womers">
+          <a class="editable" editable-label="twitter-link" href="https://twitter.com/katie_womers">
             <i class="fa fa-twitter"></i>
           </a>
-          <a href="https://medium.com/@kawomersley">
+          <a class="editable" editable-label="medium-link" href="https://medium.com/@kawomersley">
             <i class="fa fa-medium"></i>
           </a>
-          <a href="https://www.linkedin.com/in/kathleenwomersley">
+          <a class="editable" editable-label="linkedin-link" href="https://www.linkedin.com/in/kathleenwomersley">
             <i class="fa fa-linkedin-square"></i>
           </a>
         </div>
@@ -83,211 +80,30 @@
 
       <div class="section" id="about">
           <div class="row">
-            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle" src="images/katie2.jpg"></div>
+            <div class="col-sm-2 hidden-xs img-container"><img class="img-circle editable" editable-label="profile-pic" src="images/katie2.jpg"></div>
             <div class="col-xs-12 col-sm-10">
-              <p>
+              <p class="editable" editable-label="short-blurb">
                 Hi, I'm Katie. Thank you for visiting my internet home. I'm a front-end developer at <a href="https://buffer.com/about">Buffer</a> where I spend my days in React, Backbone and sometimes our PHP backend. I get excited about building a product that delights our users and working with some of the best folks on the interwebs!
               </p>
-              <p>
+              <p class="editable" editable-label="long-blurb">
                 Previously I was part of the awesome dev team at Cape Town startup <a href="https://lekkeslaap.co.za">LekkeSlaap.co.za</a> and its English sister site, <a href="https://travelground.com">Travelground.com</a>, where I worked on the full stack from SQL, PHP to the frontend. Before that I started a small digital agency, <a href="http://dune8.com">Dune8</a> where I built everything from a full Rails CMS to a custom WordPress site.
               </p>
             </div>
           </div>
       </div>
 
-      <div class="section" id="projects">
-        <h2>Projects</h2>
-        <p> These are bigger personal projects I've worked to play around with new technologies and build fun stuff (that is hopefully also sometimes useful!)</p>
-        <div class="row item-container js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="http://katies-list.katiewomersley.com/" class="thumbnail" target="_blank">
-                <img src="images/katies-list.png" alt="Katie's List">
-              </a>
-              <div class="caption">
-                <h3>Katie's List</h3>
-                <p>Am easy way to find the right day care in the South Bay, built with React.js.</p>
-                <p class="fine-print">Tools and Skills: React.js, Sass, Rails backend
-                </p>
-                <a href="http://katies-list.katiewomersley.com/" target="_blank">Visit Katie's List</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="/projects/chatterbox/" class="thumbnail" target="_blank">
-                <img src="images/chatterbox-small.png" alt="Chatterbox - anonymous chat with Backbone.js">
-              </a>
-              <div class="caption">
-                <h3>Chatterbox</h3>
-                <p>An anonymous web chat app built with Backbone.js</p>
-                <p class="fine-print">
-                  Backbone.js, Firebase backend, Bower for front-end dependency management
-                </p>
-                <a href="/projects/chatterbox/" target="_blank">Chat!</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="http://captainslogapp.com/" class="thumbnail" target="_blank">
-                <img src="images/captainslog-small.png" alt="Captains' Log app">
-              </a>
-              <div class="caption">
-                <h3>Captain's Log</h3>
-                <p>A simple, quick way to improve your productivity by logging what you accomplish each day.</p>
-                <p class="fine-print">Tools and Skills: PHP backend, Composer, Htaccess rewrites, MySQL, Prepared Statements, Sessions (cookies), Ajax, Form Validation, jQuery, Bootstrap with Less, Mustache templating.
-                </p>
-                <a href="http://captainslogapp.com/" target="_blank">Visit Captain's Log</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="/sites/Frogger/" class="thumbnail" target="_blank">
-                <img src="images/frogger-small.png" alt="Frogger game">
-              </a>
-              <div class="caption">
-                <h3>Frogger</h3>
-                <p>A classic arcade game built with object-orientated Javascipt</p>
-                <p class="fine-print">
-                  Tools and Skills: Vanilla JS, OO JS, HTML5 Canvas, Audio, CSS3/Html5 only modals
-                </p>
-                <a href="/sites/Frogger/" target="_blank">Play Frogger!</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="section" id="work">
-        <h2>Client Work</h2>
-        <p>Before joining Lekkeslaap full time, I ran my own small digital agency, <a href="http://dune8.com">Dune8.com</a> where I built websites for clients. I also designed the sites and helped with content strategy to communicate what each client's business offered in a clear and engaging way to the user. This experience taught me so much about communicating with clients, managing projects and timelines and how to use the right tool for the job, from a custom WordPress project to building out a full-stack Rails CMS.</p>
-        <div class="row js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="http://ormsphototours.herokuapp.com/" class="thumbnail">
-                <img src="images/orms-logo.png" alt="Orms Photographic Tours">
-              </a>
-              <div class="caption">
-                <h3>Orms Photographic Tours</h3>
-                <p>Orms Photographic Tours is a Rails site to showcase high-end photographic expeditions for small groups of amateur and professional photographer clients. This was my first project managing relationships with a larger corporate client with different stakeholders.</p>
-                <p class="fine-print">
-                  Rails backend, custom-made bootstrap responsive theme, rental gear page has javascript search, filtering and sorting, custom admin portal to edit rental gear, tours, testimonials and photos.
-                </p>
-                <a href="http://ormsphototours.com/">Visit Orms Photographic Tours</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="http://fizantakraal.co.za/" class="thumbnail">
-                <img src="images/fizanta-logo.jpg" alt="Fizantakraal Private Trout Lodge">
-              </a>
-              <div class="caption">
-                <h3>Fizantkraal Lodge</h3>
-                <p>This was my first contract project for Dune8. It's a simple static site to showcase the lodge.</p>
-                <p class="fine-print">
-                  Tools and Skills: HTML and CSS, responsive web design, information hierarchy and content writing.
-                </p>
-                <a href="http://fizantakraal.co.za/">Visit Fizantakraal.co.za</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="http://www.stevelouw.org/" class="thumbnail">
-                <img src="images/steve-logo.jpg" alt="Steve Louw">
-              </a>
-              <div class="caption">
-                <h3>Steve Louw Musician Website</h3>
-                <p>This site was designed and built to showcase music and the band's image and allow users to stream and buy music and videos.</p>
-
-                <p class="fine-print">Tools and Skills: PHP backend with SQL database using prepared statements, responsive design, custom music streaming, search and autocomplete for albums, songs and lyrics, npm and grunt for asset pipeline.</p>
-                <a href="http://www.stevelouw.org/">Visit Stevelouw.org</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail ">
-              <a href="http://www.youthincsa.com/" class="thumbnail">
-                <img src="images/youthinc-logo.jpg" alt="Youthinc Consultancy">
-              </a>
-              <div class="caption">
-                <h3>Youthinc Consultancy</h3>
-                <p>Youthinc.sa is a custom WordPress site since the site would be changing a lot as the team and projects evolved and everything needed to be editable.</p>
-                <p class="fine-print">Tools and Skills: developing for WordPress, responsive design, information hierarchy and content writing.
-                </p>
-                <a href="http://www.youthincsa.com/">Visit Youthincsa.com</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="section" id="sites">
-        <h2>Sites</h2>
-        <p>These are smaller fun sites I've built to hone my craft!</p>
-        <div class="js-masonry" data-masonry-options='{ "columnWidth": 0, "itemSelector": ".item" }'>
-
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail">
-              <a href="/sites/Sierpinski/" class="thumbnail">
-                <img src="images/sierpinski.png" alt="Sierpinski Triangles" />
-              </a>
-              <div class="caption">
-                <h3>Sierpinski Triangles</h3>
-                <p>Draws recursive triangles on HTML canvas to create the Sierpinksi fractal pattern.</p>
-                <a href="/sites/Sierpinski/">See Sierpinksi</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail">
-              <a href="/sites/Move-Planner/" class="thumbnail">
-                <img src="images/cityexplorer.png" alt="City Explorer" />
-              </a>
-              <div class="caption">
-                <h3>City Explorer</h3>
-                <p>Queries the NYTimes, Wikipedia and Google Maps APIs to show images and links related to a user provided street address.</p>
-                <a href="/sites/Move-Planner/">See City Explorer</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-4 item">
-            <div class="thumbnail">
-              <a href="/sites/Wedding/" class="thumbnail">
-                <img src="images/wedding.png" alt="Wedding Site">
-              </a>
-              <div class="caption">
-                <h3>Website for my Wedding!</h3>
-                <p>Simple and pretty informational site.</p>
-                <a href="/sites/Wedding/">See Wedding Site</a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-      <div>
-        &nbsp;
-      </div>
-
       <div class="section" id="more-about">
-        <h2>A Bit More About Me</h2>
+        <h2 class="editable" editable-label="more-about-me">A Bit More About Me</h2>
         <div class="row">
           <div class="col-xs-12">
-            <p>
+            <p class="editable" editable-label="about-me-1">
               My undergrad was in Philosophy and Economics, because I am quite curious and I wanted to know the meaning of Life, the Universe and Everything! I then did an MSc in Managerial Economics at the London School of Economics (LSE), which was really interesting to me because I love how good management practices have the power to encourage and develop people to be truly fulfilled and reach their potential (and even grow into new areas). The corporate life wasn't for me though, and after graduating I did a u-turn to pursue my own definition of happiness and success and taught myself to code (which I love!). I also like languages and am teaching myself German at the moment.
             </p>
-            <p>
+            <p class="editable" editable-label="about-me-2">
               What I love about being a developer is being able to build useful tools that make people's lives easier, and how the industry is so fast-paced that I'm always learning new things and being exposed to different challenges. My motto is "work hard and be nice to people". A good flat white, exploring new places, skiing and my family rock my world.
             </p>
 
-            <p>
+            <p class="editable" editable-label="about-me-3">
               You can find me on <a href="https://twitter.com/katie_womers">twitter</a> tweeting code, life and remote work or <a href="mailto:k.a.womersley@gmail.com">email me</a>. I'd love to say hi :)
             </p>
           </div>
@@ -304,15 +120,18 @@
                 <a href="https://twitter.com/katie_womers"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/kathleenwomersley"><i class="fa fa-linkedin-square"></i></a>
                 <a href="https://medium.com/@kawomersley"><i class="fa fa-medium"></i></a>
-                <a href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a>k.a.womersley@gmail.com
+                <a class="editable" editable-label="email" href="mailto:k.a.womersley@gmail.com"><i class="fa fa-envelope"></i></a>k.a.womersley@gmail.com
           </div>
         </div>
       </div>
     </footer>
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
-    <script async src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
-
+    <style type="text/css">.editable { visibility: hidden; }</style>
+    <script type="text/javascript">
+      var pm = document.createElement('script'); var url = window.location.href;
+      pm.setAttribute('src','https://pagemagic.io/pagemagic.js?domainId=2b3289e2-04a7-48a0-b9&url='+encodeURI(url));
+      document.head.appendChild(pm);
+    </script>
   </body>
 </html>
