put jquery back

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Katie Womersley</title>
 
     <!-- Bootstrap core CSS -->
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link href="css/styles.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans' rel='stylesheet' type='text/css'>
   </head>
@@ -60,7 +62,6 @@
     <div class="container">
 
       <div class="page-header">
-        <h4 class="editable" editable-label="my-name-is">My name is</h4>
         <h1 class="editable" editable-label="name">Katie Womersley</h1>
         <h4 class="editable" editable-label="tagline">and I build cool web stuff</h4>
         <div>
@@ -126,6 +127,7 @@
       </div>
     </footer>
 
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
     <style type="text/css">.editable { visibility: hidden; }</style>
     <script type="text/javascript">
